parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> archivo
Rule 1     archivo -> lineas
Rule 2     archivo -> lambda
Rule 3     lambda -> <empty>
Rule 4     lineas -> linea_normal ;
Rule 5     lineas -> linea_especial
Rule 6     lineas -> linea_normal ; lineas
Rule 7     lineas -> linea_especial lineas
Rule 8     linea_normal -> llamada_funcion
Rule 9     linea_normal -> asignacion
Rule 10    linea_normal -> declaracion
Rule 11    linea_especial -> COM_MULTI
Rule 12    linea_especial -> COM_SIMPLE
Rule 13    linea_especial -> funcion
Rule 14    linea_especial -> condicional
Rule 15    expresion -> expresion + expresion
Rule 16    expresion -> expresion - expresion
Rule 17    expresion -> expresion * expresion
Rule 18    expresion -> expresion / expresion
Rule 19    expresion -> expresion < expresion
Rule 20    expresion -> expresion > expresion
Rule 21    expresion -> expresion MAYORIG expresion
Rule 22    expresion -> expresion MENORIG expresion
Rule 23    expresion -> expresion IGUAL expresion
Rule 24    expresion -> expresion DISYUNCION expresion
Rule 25    expresion -> expresion CONJUNCION expresion
Rule 26    expresion -> - expresion
Rule 27    expresion -> ! expresion
Rule 28    expresion -> ( expresion )
Rule 29    expresion -> ENTERO
Rule 30    expresion -> REAL
Rule 31    expresion -> TR
Rule 32    expresion -> FL
Rule 33    expresion -> NULL
Rule 34    expresion -> CARACTER
Rule 35    expresion -> IDENTIFIER
Rule 36    expresion -> propiedad
Rule 37    expresion -> llamada_funcion
Rule 38    expresion -> objeto_expresion
Rule 39    propiedad -> IDENTIFIER [ STRING ]
Rule 40    propiedad -> IDENTIFIER . propiedad
Rule 41    propiedad -> IDENTIFIER . IDENTIFIER
Rule 42    propiedad -> IDENTIFIER [ STRING ] . IDENTIFIER
Rule 43    asignacion -> IDENTIFIER = expresion
Rule 44    asignacion -> propiedad = expresion
Rule 45    declaracion -> LET lista_declaraciones
Rule 46    declaracion -> TYPE IDENTIFIER = objeto_tipo
Rule 47    lista_declaraciones -> contenido_declaracion
Rule 48    lista_declaraciones -> contenido_declaracion , lista_declaraciones
Rule 49    contenido_declaracion -> IDENTIFIER
Rule 50    contenido_declaracion -> IDENTIFIER : IDENTIFIER
Rule 51    contenido_declaracion -> IDENTIFIER : IDENTIFIER = expresion
Rule 52    contenido_declaracion -> IDENTIFIER = expresion
Rule 53    condicional -> IF condiciones contenido_if
Rule 54    condicional -> IF condiciones contenido_if_else contenido_else
Rule 55    condicional -> WHILE condiciones_while contenido_while
Rule 56    condiciones -> ( expresion )
Rule 57    condiciones_while -> ( expresion )
Rule 58    contenido_while -> { lineas_cond }
Rule 59    contenido_if -> { lineas_cond }
Rule 60    contenido_if_else -> { lineas_cond }
Rule 61    contenido_else -> ELSE { lineas_cond }
Rule 62    lineas_cond -> linea_cond
Rule 63    lineas_cond -> linea_cond lineas_cond
Rule 64    linea_cond -> linea_normal_cond ;
Rule 65    linea_cond -> linea_especial_cond
Rule 66    linea_normal_cond -> llamada_funcion
Rule 67    linea_normal_cond -> asignacion
Rule 68    linea_normal_cond -> declaracion
Rule 69    linea_especial_cond -> COM_MULTI
Rule 70    linea_especial_cond -> COM_SIMPLE
Rule 71    linea_especial_cond -> condicional
Rule 72    funcion -> FUNCTION IDENTIFIER ( argumentos ) : tipo { contenido_funcion }
Rule 73    contenido_funcion -> lineas_fun RETURN expresion ;
Rule 74    contenido_funcion -> RETURN expresion ;
Rule 75    lineas_fun -> linea_normal_fun ;
Rule 76    lineas_fun -> linea_especial_fun
Rule 77    lineas_fun -> linea_normal_fun ; lineas_fun
Rule 78    lineas_fun -> linea_especial_fun lineas_fun
Rule 79    linea_normal_fun -> llamada_funcion
Rule 80    linea_normal_fun -> asignacion
Rule 81    linea_normal_fun -> declaracion
Rule 82    linea_especial_fun -> COM_MULTI
Rule 83    linea_especial_fun -> COM_SIMPLE
Rule 84    linea_especial_fun -> condicional
Rule 85    argumentos -> argumento
Rule 86    argumentos -> argumento , argumentos
Rule 87    argumentos -> lambda
Rule 88    argumento -> IDENTIFIER : tipo
Rule 89    llamada_funcion -> IDENTIFIER ( parametros_funcion )
Rule 90    parametros_funcion -> expresion
Rule 91    parametros_funcion -> expresion , parametros_funcion
Rule 92    parametros_funcion -> lambda
Rule 93    objeto_expresion -> { pares_expresion }
Rule 94    pares_expresion -> par_expresion , pares_expresion
Rule 95    pares_expresion -> par_expresion
Rule 96    par_expresion -> clave_expresion : expresion
Rule 97    clave_expresion -> IDENTIFIER
Rule 98    clave_expresion -> STRING
Rule 99    objeto_tipo -> { pares_tipo }
Rule 100   pares_tipo -> par_tipo , pares_tipo
Rule 101   pares_tipo -> par_tipo
Rule 102   par_tipo -> clave_tipo : tipo
Rule 103   clave_tipo -> IDENTIFIER
Rule 104   clave_tipo -> STRING
Rule 105   tipo -> INT
Rule 106   tipo -> FLOAT
Rule 107   tipo -> BOOLEAN
Rule 108   tipo -> CHARACTER
Rule 109   tipo -> IDENTIFIER
Rule 110   tipo -> objeto_tipo

Terminals, with rules where they appear

!                    : 27
(                    : 28 56 57 72 89
)                    : 28 56 57 72 89
*                    : 17
+                    : 15
,                    : 48 86 91 94 100
-                    : 16 26
.                    : 40 41 42
/                    : 18
:                    : 50 51 72 88 96 102
;                    : 4 6 64 73 74 75 77
<                    : 19
=                    : 43 44 46 51 52
>                    : 20
BOOLEAN              : 107
CARACTER             : 34
CHARACTER            : 108
COM_MULTI            : 11 69 82
COM_SIMPLE           : 12 70 83
CONJUNCION           : 25
DISYUNCION           : 24
ELSE                 : 61
ENTERO               : 29
FL                   : 32
FLOAT                : 106
FUNCTION             : 72
IDENTIFIER           : 35 39 40 41 41 42 42 43 46 49 50 50 51 51 52 72 88 89 97 103 109
IF                   : 53 54
IGUAL                : 23
INT                  : 105
LET                  : 45
MAYORIG              : 21
MENORIG              : 22
NULL                 : 33
REAL                 : 30
RETURN               : 73 74
STRING               : 39 42 98 104
TR                   : 31
TYPE                 : 46
WHILE                : 55
[                    : 39 42
]                    : 39 42
error                : 
{                    : 58 59 60 61 72 93 99
}                    : 58 59 60 61 72 93 99

Nonterminals, with rules where they appear

archivo              : 0
argumento            : 85 86
argumentos           : 72 86
asignacion           : 9 67 80
clave_expresion      : 96
clave_tipo           : 102
condicional          : 14 71 84
condiciones          : 53 54
condiciones_while    : 55
contenido_declaracion : 47 48
contenido_else       : 54
contenido_funcion    : 72
contenido_if         : 53
contenido_if_else    : 54
contenido_while      : 55
declaracion          : 10 68 81
expresion            : 15 15 16 16 17 17 18 18 19 19 20 20 21 21 22 22 23 23 24 24 25 25 26 27 28 43 44 51 52 56 57 73 74 90 91 96
funcion              : 13
lambda               : 2 87 92
linea_cond           : 62 63
linea_especial       : 5 7
linea_especial_cond  : 65
linea_especial_fun   : 76 78
linea_normal         : 4 6
linea_normal_cond    : 64
linea_normal_fun     : 75 77
lineas               : 1 6 7
lineas_cond          : 58 59 60 61 63
lineas_fun           : 73 77 78
lista_declaraciones  : 45 48
llamada_funcion      : 8 37 66 79
objeto_expresion     : 38
objeto_tipo          : 46 110
par_expresion        : 94 95
par_tipo             : 100 101
parametros_funcion   : 89 91
pares_expresion      : 93 94
pares_tipo           : 99 100
propiedad            : 36 40 44
tipo                 : 72 88 102

Parsing method: LALR

state 0

    (0) S' -> . archivo
    (1) archivo -> . lineas
    (2) archivo -> . lambda
    (4) lineas -> . linea_normal ;
    (5) lineas -> . linea_especial
    (6) lineas -> . linea_normal ; lineas
    (7) lineas -> . linea_especial lineas
    (3) lambda -> .
    (8) linea_normal -> . llamada_funcion
    (9) linea_normal -> . asignacion
    (10) linea_normal -> . declaracion
    (11) linea_especial -> . COM_MULTI
    (12) linea_especial -> . COM_SIMPLE
    (13) linea_especial -> . funcion
    (14) linea_especial -> . condicional
    (89) llamada_funcion -> . IDENTIFIER ( parametros_funcion )
    (43) asignacion -> . IDENTIFIER = expresion
    (44) asignacion -> . propiedad = expresion
    (45) declaracion -> . LET lista_declaraciones
    (46) declaracion -> . TYPE IDENTIFIER = objeto_tipo
    (72) funcion -> . FUNCTION IDENTIFIER ( argumentos ) : tipo { contenido_funcion }
    (53) condicional -> . IF condiciones contenido_if
    (54) condicional -> . IF condiciones contenido_if_else contenido_else
    (55) condicional -> . WHILE condiciones_while contenido_while
    (39) propiedad -> . IDENTIFIER [ STRING ]
    (40) propiedad -> . IDENTIFIER . propiedad
    (41) propiedad -> . IDENTIFIER . IDENTIFIER
    (42) propiedad -> . IDENTIFIER [ STRING ] . IDENTIFIER

    $end            reduce using rule 3 (lambda -> .)
    COM_MULTI       shift and go to state 9
    COM_SIMPLE      shift and go to state 10
    IDENTIFIER      shift and go to state 13
    LET             shift and go to state 15
    TYPE            shift and go to state 16
    FUNCTION        shift and go to state 17
    IF              shift and go to state 18
    WHILE           shift and go to state 19

    archivo                        shift and go to state 1
    lineas                         shift and go to state 2
    lambda                         shift and go to state 3
    linea_normal                   shift and go to state 4
    linea_especial                 shift and go to state 5
    llamada_funcion                shift and go to state 6
    asignacion                     shift and go to state 7
    declaracion                    shift and go to state 8
    funcion                        shift and go to state 11
    condicional                    shift and go to state 12
    propiedad                      shift and go to state 14

state 1

    (0) S' -> archivo .



state 2

    (1) archivo -> lineas .

    $end            reduce using rule 1 (archivo -> lineas .)


state 3

    (2) archivo -> lambda .

    $end            reduce using rule 2 (archivo -> lambda .)


state 4

    (4) lineas -> linea_normal . ;
    (6) lineas -> linea_normal . ; lineas

    ;               shift and go to state 20


state 5

    (5) lineas -> linea_especial .
    (7) lineas -> linea_especial . lineas
    (4) lineas -> . linea_normal ;
    (5) lineas -> . linea_especial
    (6) lineas -> . linea_normal ; lineas
    (7) lineas -> . linea_especial lineas
    (8) linea_normal -> . llamada_funcion
    (9) linea_normal -> . asignacion
    (10) linea_normal -> . declaracion
    (11) linea_especial -> . COM_MULTI
    (12) linea_especial -> . COM_SIMPLE
    (13) linea_especial -> . funcion
    (14) linea_especial -> . condicional
    (89) llamada_funcion -> . IDENTIFIER ( parametros_funcion )
    (43) asignacion -> . IDENTIFIER = expresion
    (44) asignacion -> . propiedad = expresion
    (45) declaracion -> . LET lista_declaraciones
    (46) declaracion -> . TYPE IDENTIFIER = objeto_tipo
    (72) funcion -> . FUNCTION IDENTIFIER ( argumentos ) : tipo { contenido_funcion }
    (53) condicional -> . IF condiciones contenido_if
    (54) condicional -> . IF condiciones contenido_if_else contenido_else
    (55) condicional -> . WHILE condiciones_while contenido_while
    (39) propiedad -> . IDENTIFIER [ STRING ]
    (40) propiedad -> . IDENTIFIER . propiedad
    (41) propiedad -> . IDENTIFIER . IDENTIFIER
    (42) propiedad -> . IDENTIFIER [ STRING ] . IDENTIFIER

    $end            reduce using rule 5 (lineas -> linea_especial .)
    COM_MULTI       shift and go to state 9
    COM_SIMPLE      shift and go to state 10
    IDENTIFIER      shift and go to state 13
    LET             shift and go to state 15
    TYPE            shift and go to state 16
    FUNCTION        shift and go to state 17
    IF              shift and go to state 18
    WHILE           shift and go to state 19

    linea_especial                 shift and go to state 5
    lineas                         shift and go to state 21
    linea_normal                   shift and go to state 4
    llamada_funcion                shift and go to state 6
    asignacion                     shift and go to state 7
    declaracion                    shift and go to state 8
    funcion                        shift and go to state 11
    condicional                    shift and go to state 12
    propiedad                      shift and go to state 14

state 6

    (8) linea_normal -> llamada_funcion .

    ;               reduce using rule 8 (linea_normal -> llamada_funcion .)


state 7

    (9) linea_normal -> asignacion .

    ;               reduce using rule 9 (linea_normal -> asignacion .)


state 8

    (10) linea_normal -> declaracion .

    ;               reduce using rule 10 (linea_normal -> declaracion .)


state 9

    (11) linea_especial -> COM_MULTI .

    COM_MULTI       reduce using rule 11 (linea_especial -> COM_MULTI .)
    COM_SIMPLE      reduce using rule 11 (linea_especial -> COM_MULTI .)
    IDENTIFIER      reduce using rule 11 (linea_especial -> COM_MULTI .)
    LET             reduce using rule 11 (linea_especial -> COM_MULTI .)
    TYPE            reduce using rule 11 (linea_especial -> COM_MULTI .)
    FUNCTION        reduce using rule 11 (linea_especial -> COM_MULTI .)
    IF              reduce using rule 11 (linea_especial -> COM_MULTI .)
    WHILE           reduce using rule 11 (linea_especial -> COM_MULTI .)
    $end            reduce using rule 11 (linea_especial -> COM_MULTI .)


state 10

    (12) linea_especial -> COM_SIMPLE .

    COM_MULTI       reduce using rule 12 (linea_especial -> COM_SIMPLE .)
    COM_SIMPLE      reduce using rule 12 (linea_especial -> COM_SIMPLE .)
    IDENTIFIER      reduce using rule 12 (linea_especial -> COM_SIMPLE .)
    LET             reduce using rule 12 (linea_especial -> COM_SIMPLE .)
    TYPE            reduce using rule 12 (linea_especial -> COM_SIMPLE .)
    FUNCTION        reduce using rule 12 (linea_especial -> COM_SIMPLE .)
    IF              reduce using rule 12 (linea_especial -> COM_SIMPLE .)
    WHILE           reduce using rule 12 (linea_especial -> COM_SIMPLE .)
    $end            reduce using rule 12 (linea_especial -> COM_SIMPLE .)


state 11

    (13) linea_especial -> funcion .

    COM_MULTI       reduce using rule 13 (linea_especial -> funcion .)
    COM_SIMPLE      reduce using rule 13 (linea_especial -> funcion .)
    IDENTIFIER      reduce using rule 13 (linea_especial -> funcion .)
    LET             reduce using rule 13 (linea_especial -> funcion .)
    TYPE            reduce using rule 13 (linea_especial -> funcion .)
    FUNCTION        reduce using rule 13 (linea_especial -> funcion .)
    IF              reduce using rule 13 (linea_especial -> funcion .)
    WHILE           reduce using rule 13 (linea_especial -> funcion .)
    $end            reduce using rule 13 (linea_especial -> funcion .)


state 12

    (14) linea_especial -> condicional .

    COM_MULTI       reduce using rule 14 (linea_especial -> condicional .)
    COM_SIMPLE      reduce using rule 14 (linea_especial -> condicional .)
    IDENTIFIER      reduce using rule 14 (linea_especial -> condicional .)
    LET             reduce using rule 14 (linea_especial -> condicional .)
    TYPE            reduce using rule 14 (linea_especial -> condicional .)
    FUNCTION        reduce using rule 14 (linea_especial -> condicional .)
    IF              reduce using rule 14 (linea_especial -> condicional .)
    WHILE           reduce using rule 14 (linea_especial -> condicional .)
    $end            reduce using rule 14 (linea_especial -> condicional .)


state 13

    (89) llamada_funcion -> IDENTIFIER . ( parametros_funcion )
    (43) asignacion -> IDENTIFIER . = expresion
    (39) propiedad -> IDENTIFIER . [ STRING ]
    (40) propiedad -> IDENTIFIER . . propiedad
    (41) propiedad -> IDENTIFIER . . IDENTIFIER
    (42) propiedad -> IDENTIFIER . [ STRING ] . IDENTIFIER

    (               shift and go to state 22
    =               shift and go to state 23
    [               shift and go to state 24
    .               shift and go to state 25


state 14

    (44) asignacion -> propiedad . = expresion

    =               shift and go to state 26


state 15

    (45) declaracion -> LET . lista_declaraciones
    (47) lista_declaraciones -> . contenido_declaracion
    (48) lista_declaraciones -> . contenido_declaracion , lista_declaraciones
    (49) contenido_declaracion -> . IDENTIFIER
    (50) contenido_declaracion -> . IDENTIFIER : IDENTIFIER
    (51) contenido_declaracion -> . IDENTIFIER : IDENTIFIER = expresion
    (52) contenido_declaracion -> . IDENTIFIER = expresion

    IDENTIFIER      shift and go to state 29

    lista_declaraciones            shift and go to state 27
    contenido_declaracion          shift and go to state 28

state 16

    (46) declaracion -> TYPE . IDENTIFIER = objeto_tipo

    IDENTIFIER      shift and go to state 30


state 17

    (72) funcion -> FUNCTION . IDENTIFIER ( argumentos ) : tipo { contenido_funcion }

    IDENTIFIER      shift and go to state 31


state 18

    (53) condicional -> IF . condiciones contenido_if
    (54) condicional -> IF . condiciones contenido_if_else contenido_else
    (56) condiciones -> . ( expresion )

    (               shift and go to state 33

    condiciones                    shift and go to state 32

state 19

    (55) condicional -> WHILE . condiciones_while contenido_while
    (57) condiciones_while -> . ( expresion )

    (               shift and go to state 35

    condiciones_while              shift and go to state 34

state 20

    (4) lineas -> linea_normal ; .
    (6) lineas -> linea_normal ; . lineas
    (4) lineas -> . linea_normal ;
    (5) lineas -> . linea_especial
    (6) lineas -> . linea_normal ; lineas
    (7) lineas -> . linea_especial lineas
    (8) linea_normal -> . llamada_funcion
    (9) linea_normal -> . asignacion
    (10) linea_normal -> . declaracion
    (11) linea_especial -> . COM_MULTI
    (12) linea_especial -> . COM_SIMPLE
    (13) linea_especial -> . funcion
    (14) linea_especial -> . condicional
    (89) llamada_funcion -> . IDENTIFIER ( parametros_funcion )
    (43) asignacion -> . IDENTIFIER = expresion
    (44) asignacion -> . propiedad = expresion
    (45) declaracion -> . LET lista_declaraciones
    (46) declaracion -> . TYPE IDENTIFIER = objeto_tipo
    (72) funcion -> . FUNCTION IDENTIFIER ( argumentos ) : tipo { contenido_funcion }
    (53) condicional -> . IF condiciones contenido_if
    (54) condicional -> . IF condiciones contenido_if_else contenido_else
    (55) condicional -> . WHILE condiciones_while contenido_while
    (39) propiedad -> . IDENTIFIER [ STRING ]
    (40) propiedad -> . IDENTIFIER . propiedad
    (41) propiedad -> . IDENTIFIER . IDENTIFIER
    (42) propiedad -> . IDENTIFIER [ STRING ] . IDENTIFIER

    $end            reduce using rule 4 (lineas -> linea_normal ; .)
    COM_MULTI       shift and go to state 9
    COM_SIMPLE      shift and go to state 10
    IDENTIFIER      shift and go to state 13
    LET             shift and go to state 15
    TYPE            shift and go to state 16
    FUNCTION        shift and go to state 17
    IF              shift and go to state 18
    WHILE           shift and go to state 19

    linea_normal                   shift and go to state 4
    lineas                         shift and go to state 36
    linea_especial                 shift and go to state 5
    llamada_funcion                shift and go to state 6
    asignacion                     shift and go to state 7
    declaracion                    shift and go to state 8
    funcion                        shift and go to state 11
    condicional                    shift and go to state 12
    propiedad                      shift and go to state 14

state 21

    (7) lineas -> linea_especial lineas .

    $end            reduce using rule 7 (lineas -> linea_especial lineas .)


state 22

    (89) llamada_funcion -> IDENTIFIER ( . parametros_funcion )
    (90) parametros_funcion -> . expresion
    (91) parametros_funcion -> . expresion , parametros_funcion
    (92) parametros_funcion -> . lambda
    (15) expresion -> . expresion + expresion
    (16) expresion -> . expresion - expresion
    (17) expresion -> . expresion * expresion
    (18) expresion -> . expresion / expresion
    (19) expresion -> . expresion < expresion
    (20) expresion -> . expresion > expresion
    (21) expresion -> . expresion MAYORIG expresion
    (22) expresion -> . expresion MENORIG expresion
    (23) expresion -> . expresion IGUAL expresion
    (24) expresion -> . expresion DISYUNCION expresion
    (25) expresion -> . expresion CONJUNCION expresion
    (26) expresion -> . - expresion
    (27) expresion -> . ! expresion
    (28) expresion -> . ( expresion )
    (29) expresion -> . ENTERO
    (30) expresion -> . REAL
    (31) expresion -> . TR
    (32) expresion -> . FL
    (33) expresion -> . NULL
    (34) expresion -> . CARACTER
    (35) expresion -> . IDENTIFIER
    (36) expresion -> . propiedad
    (37) expresion -> . llamada_funcion
    (38) expresion -> . objeto_expresion
    (3) lambda -> .
    (39) propiedad -> . IDENTIFIER [ STRING ]
    (40) propiedad -> . IDENTIFIER . propiedad
    (41) propiedad -> . IDENTIFIER . IDENTIFIER
    (42) propiedad -> . IDENTIFIER [ STRING ] . IDENTIFIER
    (89) llamada_funcion -> . IDENTIFIER ( parametros_funcion )
    (93) objeto_expresion -> . { pares_expresion }

    -               shift and go to state 42
    !               shift and go to state 43
    (               shift and go to state 38
    ENTERO          shift and go to state 44
    REAL            shift and go to state 45
    TR              shift and go to state 46
    FL              shift and go to state 47
    NULL            shift and go to state 48
    CARACTER        shift and go to state 49
    IDENTIFIER      shift and go to state 37
    )               reduce using rule 3 (lambda -> .)
    {               shift and go to state 53

    parametros_funcion             shift and go to state 39
    expresion                      shift and go to state 40
    lambda                         shift and go to state 41
    propiedad                      shift and go to state 50
    llamada_funcion                shift and go to state 51
    objeto_expresion               shift and go to state 52

state 23

    (43) asignacion -> IDENTIFIER = . expresion
    (15) expresion -> . expresion + expresion
    (16) expresion -> . expresion - expresion
    (17) expresion -> . expresion * expresion
    (18) expresion -> . expresion / expresion
    (19) expresion -> . expresion < expresion
    (20) expresion -> . expresion > expresion
    (21) expresion -> . expresion MAYORIG expresion
    (22) expresion -> . expresion MENORIG expresion
    (23) expresion -> . expresion IGUAL expresion
    (24) expresion -> . expresion DISYUNCION expresion
    (25) expresion -> . expresion CONJUNCION expresion
    (26) expresion -> . - expresion
    (27) expresion -> . ! expresion
    (28) expresion -> . ( expresion )
    (29) expresion -> . ENTERO
    (30) expresion -> . REAL
    (31) expresion -> . TR
    (32) expresion -> . FL
    (33) expresion -> . NULL
    (34) expresion -> . CARACTER
    (35) expresion -> . IDENTIFIER
    (36) expresion -> . propiedad
    (37) expresion -> . llamada_funcion
    (38) expresion -> . objeto_expresion
    (39) propiedad -> . IDENTIFIER [ STRING ]
    (40) propiedad -> . IDENTIFIER . propiedad
    (41) propiedad -> . IDENTIFIER . IDENTIFIER
    (42) propiedad -> . IDENTIFIER [ STRING ] . IDENTIFIER
    (89) llamada_funcion -> . IDENTIFIER ( parametros_funcion )
    (93) objeto_expresion -> . { pares_expresion }

    -               shift and go to state 42
    !               shift and go to state 43
    (               shift and go to state 38
    ENTERO          shift and go to state 44
    REAL            shift and go to state 45
    TR              shift and go to state 46
    FL              shift and go to state 47
    NULL            shift and go to state 48
    CARACTER        shift and go to state 49
    IDENTIFIER      shift and go to state 37
    {               shift and go to state 53

    expresion                      shift and go to state 54
    propiedad                      shift and go to state 50
    llamada_funcion                shift and go to state 51
    objeto_expresion               shift and go to state 52

state 24

    (39) propiedad -> IDENTIFIER [ . STRING ]
    (42) propiedad -> IDENTIFIER [ . STRING ] . IDENTIFIER

    STRING          shift and go to state 55


state 25
